--- a/remotetea/changelog.html
+++ b/remotetea/changelog.html
@@ -10,7 +10,7 @@
 
 
 <p class="revision">CVS info:
-$Revision: 1.1 $ $Date: 2003/08/14 09:22:46 $ $State: Exp $ $Locker:  $</p>
+$Revision: 1.2 $ $Date: 2003/08/14 14:14:51 $ $State: Exp $ $Locker:  $</p>
 
 <h1>Change Log <q>Remote Tea</q></h1>
 
@@ -42,6 +42,13 @@ project on its own feet. Let's see where this will lead to.</p>
   class="product">jrpcgen</span>: it does not emit unnecessary import
   statements anymore. This silences especially the
   <q>Eclipse</q> IDE, but also other <q>smart asses</q>.</span></li>
+
+  <li><span>It is now possible to optionally control the character
+  encoding used when (de-)serializing strings. The <code>OncRpcClient</code>
+  class now has a pair of accessors
+  <code>setCharacterEncoding(<i>encoding</i>)</code> and
+  <code>getCharacterEncoding()</code>. Similiar, <code>OncRpcServerStub</code>
+  gives control over character encoding on the server side.</span></li>
 
 </ul>
 
