--- a/remotetea/changelog.html
+++ b/remotetea/changelog.html
@@ -10,12 +10,28 @@
 
 
 <p class="revision">CVS info:
-$Revision: 1.3 $ $Date: 2005/11/11 21:32:42 $ $State: Exp $ $Locker:  $</p>
+$Revision: 1.4 $ $Date: 2006/03/18 17:53:47 $ $State: Exp $ $Locker:  $</p>
 
 <h1>Change Log <q>Remote Tea</q></h1>
 
 <p><a class="ext" href="http://remotetea.sourceforge.net">Remote Tea
 Project Home Page</a> on SourceForge.</p>
+
+<h2>Version 1.0.5:</h2>
+
+<p>This is a minor update version.
+
+<ul>
+
+  <li><span>Fixed a code generation error in jrpcgen which cause the protocol
+  compiler to emit ONC/RPC server code that did not properly returned errors for
+  unsupported programs.</span></li>
+
+  <li><span>Fixed <code>build.xml</code> Ant script to include also exactly this
+  build file in the source code zip which gets uploaded to Source Forge.</span></li>
+  
+</ul>
+
 
 <h2>Version 1.0.4:</h2>
 
@@ -524,7 +540,7 @@ out of the door.</p>
   <code>XdrEncodingStream.xdrEncodeByteFixedVector()</code> which
   falsely encoded length information about the following array of
   characters.  I should take more care when doing <code>Italian code
-  recycling</q> using copy &amp; pasta...</span></li>
+  recycling</code> using copy &amp; pasta...</span></li>
 
   <li><span>Fixed bug in <code>OncRpcTcpClient.call()</code> which
   caused XDR buffer underflows when receiving the next reply after the
