--- a/remotetea/changelog.html
+++ b/remotetea/changelog.html
@@ -10,7 +10,7 @@
 
 
 <p class="revision">CVS info:
-$Revision: 1.4 $ $Date: 2006/03/18 17:53:47 $ $State: Exp $ $Locker:  $</p>
+$Revision: 1.5 $ $Date: 2006/03/18 18:28:43 $ $State: Exp $ $Locker:  $</p>
 
 <h1>Change Log <q>Remote Tea</q></h1>
 
@@ -19,13 +19,16 @@ Project Home Page</a> on SourceForge.</p>
 
 <h2>Version 1.0.5:</h2>
 
-<p>This is a minor update version.
+<p>This is a minor update/maintenance release.
 
 <ul>
 
   <li><span>Fixed a code generation error in jrpcgen which cause the protocol
   compiler to emit ONC/RPC server code that did not properly returned errors for
   unsupported programs.</span></li>
+
+  <li><span>Added new jrpcgen-test target to Ant build file so that the
+  jrpcgen protocol compiler can be more easily tested on the example files.</span></li>
 
   <li><span>Fixed <code>build.xml</code> Ant script to include also exactly this
   build file in the source code zip which gets uploaded to Source Forge.</span></li>
