--- a/remotetea/changelog.html
+++ b/remotetea/changelog.html
@@ -10,12 +10,26 @@
 
 
 <p class="revision">CVS info:
-$Revision: 1.5 $ $Date: 2006/03/18 18:28:43 $ $State: Exp $ $Locker:  $</p>
+$Revision: 1.6 $ $Date: 2007/06/03 15:54:47 $ $State: Exp $ $Locker:  $</p>
 
 <h1>Change Log <q>Remote Tea</q></h1>
 
 <p><a class="ext" href="http://remotetea.sourceforge.net">Remote Tea
 Project Home Page</a> on SourceForge.</p>
+
+<h2>Version 1.0.6:</h2>
+
+<p>This is again a minur update/maintenance release.
+
+<ul>
+
+  <li><span>Fixed encapsulation of properties when generating beans.</span></li>
+
+  <li><span>Fixed miscalculation of remaining timeout, which could case
+  infinite timeouts.</span></li>
+
+</ul>
+
 
 <h2>Version 1.0.5:</h2>
 
