--- a/remotetea/changelog.html
+++ b/remotetea/changelog.html
@@ -10,16 +10,32 @@
 
 
 <p class="revision">CVS info:
-$Revision: 1.6 $ $Date: 2007/06/03 15:54:47 $ $State: Exp $ $Locker:  $</p>
+$Revision: 1.7 $ $Date: 2008/01/02 15:12:47 $ $State: Exp $ $Locker:  $</p>
 
 <h1>Change Log <q>Remote Tea</q></h1>
 
 <p><a class="ext" href="http://remotetea.sourceforge.net">Remote Tea
 Project Home Page</a> on SourceForge.</p>
 
+<h2>Version 1.0.7:</h2>
+
+<p>You already guessed it: minor update/maintenance release.
+
+<ul>
+
+	<li><span>Fixed inheriting character encoding from TCP-based listening server transport
+	to the child TCP-based server connection transports.</span></li>
+	
+	<li><span>Fixed/corrected behavior when registering server transports: an ONC/RPC exception
+	with the reason <code>OncRpcException.RPC_CANNOTREGISTER</code> will now be thrown if the local portmapper
+	denies port registration.</span></li>
+
+</ul>
+
+
 <h2>Version 1.0.6:</h2>
 
-<p>This is again a minur update/maintenance release.
+<p>This is again a minor update/maintenance release.
 
 <ul>
 
