--- a/remotetea/src/tests/org/acplt/oncrpc/EchoClientTest.html
+++ b/remotetea/src/tests/org/acplt/oncrpc/EchoClientTest.html
@@ -33,7 +33,7 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Library General Public License for more details.
 
 <p>You should have received a copy of the GNU Library General Public
-License along with this program (see the file COPYING.LIB for more
+License along with this program (see the file LICENSE.txt for more
 details); if not, write to the Free Software Foundation, Inc.,
 675 Mass Ave, Cambridge, MA 02139, USA.
 
