Maven packaging of the ONC/RPC runtime package has been changed to 'bundle', adding OSGi bundle information to the manifest. This change enables integration of the ONC/RPC runtime package into Apachae Camel and Karaf.

--- a/remotetea/information/src/main/resources/META-INF/changelog.html
+++ b/remotetea/information/src/main/resources/META-INF/changelog.html
@@ -13,6 +13,15 @@
 <p><a class="ext" href="http://sourceforge.net/projects/remotetea/">Remote Tea
 Project Home Page</a> on SourceForge.</p>
 
+<h2>Version 1.1.2:</h2>
+
+<p>This is a minor maintance release</p>
+
+<h3>Changed packaging of the ONC/RPC runtime package</h3>
+
+<p>The Maven packaging of the ONC/RPC runtime package has been changed to <em>bundle</em>,
+adding OSGi bundle information to the manifest.</p>
+  
 <h2>Version 1.1.1:</h2>
 
 <p>This is a minor maintenance release.</p>
